[gd_scene load_steps=5 format=3 uid="uid://d1ebvxw7kelkv"]

[ext_resource type="Script" path="res://levels/infinite_level.gd" id="1_8smdp"]
[ext_resource type="Script" path="res://levels/cubes_container_middle.gd" id="2_4lf1q"]
[ext_resource type="Script" path="res://levels/cubes_container_left.gd" id="3_up876"]
[ext_resource type="Script" path="res://levels/cubes_container_right.gd" id="4_tj0ur"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_8smdp")

[node name="cubes_container_middle" type="Node3D" parent="."]
script = ExtResource("2_4lf1q")

[node name="cubes_container_left" type="Node3D" parent="."]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 5, 0, 0)
script = ExtResource("3_up876")

[node name="cubes_container_right" type="Node3D" parent="."]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, -5, 0, 0)
script = ExtResource("4_tj0ur")
